Запускается тесты 59/51